--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/KUMART007/Google-search-my-app/issues"
   },
-  "homepage": "https://github.com/KUMART007/Google-search-my-app#readme"
+  "homepage": "https://github.com/KUMART007/Google-search-my-app#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.9.1",
+    "path": "^0.12.7"
+  }
 }
